issue #013 add the second collapse button at the bottom

--- a/src/components/navigation/menu.css
+++ b/src/components/navigation/menu.css
@@ -1,6 +1,5 @@
 .logout {
-  /* padding: 1.3rem; */
-  border-top: 1px solid #f0f0f0;
+  /* border-top: 1px solid #f0f0f0; */
   color: "#303030";
   cursor: pointer;
 }
